# virtual-gamepads

./: Cargo.toml  LICENSE.md  README.md  build.rs  flake.nix
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ABXY.tsx  Joystick.tsx
frontend/src/socket/: context.tsx  provider.tsx  types.tsx
src/: controller.rs  main.rs  socket.rs
static/: index.html
