[package]
name = "virtual-gamepads"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1"
evdev = "0.12"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.19.0", features = ["v4"] }
dashmap = "6.1.0"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
